--- a/meme_space/package.json
+++ b/meme_space/package.json
@@ -17,6 +17,7 @@
     "react": "^18.3.1",
     "react-chartjs-2": "^5.2.0",
     "react-dom": "^18.3.1",
+    "react-fast-marquee": "^1.6.5",
     "react-router-dom": "^7.0.2"
   },
   "devDependencies": {
